// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> Render must match large 1`] = `
<div>
  <img
    alt="news"
    height="200"
    src="https://avatars.githubusercontent.com/u/81188645?s=200&v=4"
    width="200"
  />
</div>
`;

exports[`<Image /> Render must match medium 1`] = `
<div>
  <img
    alt="news"
    height="100"
    src="https://avatars.githubusercontent.com/u/81188645?s=200&v=4"
    width="100"
  />
</div>
`;

exports[`<Image /> Render must match small 1`] = `
<div>
  <img
    alt="news"
    height="50"
    src="https://avatars.githubusercontent.com/u/81188645?s=200&v=4"
    width="50"
  />
</div>
`;

exports[`<Image /> Render must match tiny 1`] = `
<div>
  <img
    alt="news"
    height="25"
    src="https://avatars.githubusercontent.com/u/81188645?s=200&v=4"
    width="25"
  />
</div>
`;
